--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Spoorthy Kannur's portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -228,17 +228,17 @@
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" id="name" placeholder="Name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" id="email" placeholder="name@example.com" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" id ="subject" placeholder="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" id ="text" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
@@ -255,5 +255,67 @@
     </footer>
 
     <script src="script.js"></script>
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use-->
+     <!--https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
+
+    <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+        apiKey: "AIzaSyBNiYbR2P9LbiLDfrIep-TP3iZqznnzNcY",
+        authDomain: "portfolio-aa084.firebaseapp.com",
+        projectId: "portfolio-aa084",
+        storageBucket: "portfolio-aa084.appspot.com",
+        messagingSenderId: "858095797361",
+        appId: "1:858095797361:web:6701cadcbb5595ddc3c7d0",
+        measurementId: "G-SYKWL8V9FW"
+    };
+  // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+
+    var messagesRef = firebase.database()
+        .ref('This is Spoorthy Kannur');
+          
+    document.getElementById('contact')
+        .addEventListener('submit', submitForm);
+  
+    function submitForm(e) {
+        e.preventDefault();
+  
+            // Get values
+        var name = getInputVal('name');
+        var email = getInputVal('email');
+        var subject = getInputVal('subject');
+        var text = getInputVal('text');
+  
+        saveMessage(name, email);
+        document.getElementById('contact').reset();
+    }
+  
+    // Function to get get form values
+    function getInputVal(id) {
+        return document.getElementById(id).value;
+    }
+  
+    // Save message to firebase
+    function saveMessage(name, email, subject, text) {
+        var newMessageRef = messagesRef.push();
+        newMessageRef.set({
+            name: name,
+            email: email,
+            subject: subject,
+            text: text,
+        });
+    }
+
+
+    </script>
 </body>
 </html>
+
