--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         var subject = getInputVal('subject');
         var text = getInputVal('text');
   
-        saveMessage(name, email);
+        saveMessage(name, email, subject, text);
         document.getElementById('contact').reset();
     }
   
