--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spoorthy Kannur's portfolio</title>
+    <title>Spoorthy Kannur</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -154,35 +154,35 @@
                 <div class="card">
                     <div class="box"><a href="tedxstickers.html">
                         <img src="images/ps1.jpg" alt="">
-                        <div class="text">Title        
+                        <div class="text">Web Devlopment (Front-end)        
                           <br>See More</a></div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box"><a href="tedxstickers.html">
-                        <img src="images/ps2.png" alt="">
-                        <div class="text">Title        
+                        <img src="images/ps2.jpg" alt="">
+                        <div class="text">My Artworks        
                           <br>See More</a></div>                  
                         </div>
                     </div>
                 <div class="card">
                     <div class="box"><a href="tedxstickers.html">
-                        <img src="images/ps3.png" alt="">
-                        <div class="text">Title        
+                        <img src="images/ps3.jpg" alt="">
+                        <div class="text">Digital Art/Illustration        
                           <br>See More</a></div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box"><a href="tedxstickers.html">
-                        <img src="images/ps4.png" alt="">
-                        <div class="text">Title        
+                        <img src="images/ps4.jpg" alt="">
+                        <div class="text">Cartoons for the New Yorker        
                           <br>See More</a></div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box"><a href="tedxstickers.html">
-                        <img src="images/p5.jpeg" alt="">
-                        <div class="text">Title        
+                        <img src="images/ps5.jpg" alt="">
+                        <div class="text">Stickers for TEDxMVJCE       
                           <br>See More</a></div>
                     </div>
                 </div>
