finished setting up contact section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#design" class="menu-btn">Design</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
-                <li><a href ="https://www.google.com/"><i class="fab fa-instagram" style="font-size:18px;color:white;margin-left:10px"></a></i></li>
+                <li><a href ="https://www.instagram.com/cutcopypasteshoot/"><i class="fab fa-instagram" style="font-size:18px;color:white;margin-left:10px"></a></i></li>
                 <li><a href ="https://www.google.com/"><i class="fab fa-twitter" style="font-size:18px;color:white;margin-left:10px"></a></i></li>
             </ul>
             <div class="menu-btn">
@@ -71,23 +71,23 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
+                        <i class="fas fa-code"></i>
                         <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Still developing skills and therfore only on the lookout for internship oppurtunities.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Currently, Not Applicable.<br> Will look into it in the future.<br> Stay tuned.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Digital Illustration</div>
+                        <p>Still developing skills and therfore only on the lookout for internship oppurtunities.</p>
                     </div>
                 </div>
                </div>
@@ -152,28 +152,28 @@
             <h2 class="title">My Designs</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
-                    <div class="box"><a href="tedxstickers.html">
+                    <div class="box"><a href="webdev.html">
                         <img src="images/ps1.jpg" alt="">
                         <div class="text">Web Devlopment (Front-end)        
                           <br>See More</a></div>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="box"><a href="tedxstickers.html">
+                    <div class="box"><a href="myartworks.html">
                         <img src="images/ps2.jpg" alt="">
                         <div class="text">My Artworks        
                           <br>See More</a></div>                  
                         </div>
                     </div>
                 <div class="card">
-                    <div class="box"><a href="tedxstickers.html">
+                    <div class="box"><a href="digitalart.html">
                         <img src="images/ps3.jpg" alt="">
                         <div class="text">Digital Art/Illustration        
                           <br>See More</a></div>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="box"><a href="tedxstickers.html">
+                    <div class="box"><a href="cartoons.html">
                         <img src="images/ps4.jpg" alt="">
                         <div class="text">Cartoons for the New Yorker        
                           <br>See More</a></div>
@@ -198,7 +198,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>It is always wonderful to connect to new people and discuss my intrests, please feel free to contact through this form or through social media. Always keen to know more.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -218,7 +218,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">spoorthy.kannur@gmail.com</div>
+                                <div class="sub-title">cutcopypasteshoot@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -252,7 +252,7 @@
 
     <!-- social media section start -->
     <footer>
-        <span>spoo_oops<a href="https://www.google.com"> google</a> | oops </span>
+        <span>spoo_oops<a href="https://spoorthykannur.me/#contact"> cutcopypasteshoot </a>| oops </span>
     </footer>
 
     <script src="script.js"></script>
