--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Spoorthy and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <p>Designing as always been an something I've loved. Only recently did I develope a keen interest to turn into a career and start this website inorder to put together anything for anyone who is on the lookout to know more about me and my work. <br></p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -102,7 +102,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>Inlcuding these set of skills, I have also learnt a good deal of python and the django framework. My creative skills extrapolate into artwork. Given that I'm a fast learner I can pick up any additional skill required confidently. I can communicate well in english, hindi, kannada, telgu and aspire to complete my french within this year. I'm hoping to venture into handmade-reusable commodity someday in the future. </p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -198,7 +198,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>It is always wonderful to connect to new people and discuss my intrests, please feel free to contact through this form or through social media. Always keen to know more.</p>
+                    <p>It is always wonderful to connect with new people and discuss my intrests, please feel free to contact through this form or through social media. Always keen to know more.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
