disabled hire me

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Spoorthy and I'm a <span class="typing-2"></span></div>
-                    <p>Designing as always been an something I've loved. Only recently did I develope a keen interest to turn into a career and start this website inorder to put together anything for anyone who is on the lookout to know more about me and my work. <br></p>
+                    <p>Designing has always been an something I've loved. Only recently did I develope a keen interest to turn into a career and start this website inorder to put together anything for anyone who is on the lookout to know more about me and my work. <br></p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
