--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,13 +18,14 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#"><a href="#">oo<span>ps.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#design" class="menu-btn">Design</a></li>
+                <li><a href="#blog" class="menu-btn">Blog</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
                 <li><a href ="https://www.instagram.com/cutcopypasteshoot/"><i class="fab fa-instagram" style="font-size:18px;color:white;margin-left:10px"></a></i></li>
                 <li><a href ="https://www.google.com/"><i class="fab fa-twitter" style="font-size:18px;color:white;margin-left:10px"></a></i></li>
@@ -58,7 +59,7 @@
                 <div class="column right">
                     <div class="text">I'm Spoorthy and I'm a <span class="typing-2"></span></div>
                     <p>Designing has always been an something I've loved. Only recently did I develope a keen interest to turn into a career and start this website inorder to put together anything for anyone who is on the lookout to know more about me and my work. <br></p>
-                    <a href="#">Download CV</a>
+                    <a href="images/CV_SpoorthyKannur.pdf" download>Download CV</a>
                 </div>
             </div>
         </div>
@@ -186,6 +187,38 @@
                           <br>See More</a></div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- blog section start -->
+    <section class="blog" id="blog">
+        <div class="max-width">
+        <h2 class="title">Blog</h2>
+            <div class="blog-content">
+                <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+                    <div class="btn">
+                        <div class="bg"></div>
+                        <span class="noselect">Close the blinds</span>
+                        <div class="string"></div>
+                        <div class="string-end"></div>
+                        <div class="blind" id="b1"></div>
+                        <div class="blind" id="b2"></div>
+                        <div class="blind" id="b3"></div>
+                        <div class="blind" id="b4"></div>
+                        <div class="blind" id="b5"></div>
+                        <div class="blind" id="b6"></div>
+                        <div class="blind" id="b7"></div>
+                        <div class="blind" id="b8"></div>
+                        <div class="blind" id="b9"></div>
+                        <div class="blind" id="b10"></div>
+                        <div class="blind" id="b11"></div>
+                        <div class="blind" id="b12"></div>
+                        <div class="blind" id="b13"></div>
+                        <div class="blind" id="b14"></div>
+                        <div class="blind" id="b15"></div>
+                        <div class="blind" id="b16"></div>
+                    </div>
             </div>
         </div>
     </section>
